--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,22 @@ yarn-debug.log*
 yarn-error.log*
 
 *.bak
+
+#WebStorm
+.idea/
+
+
+#Visual Studio Code
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
