feat: unit tests in ParametersPanel and utils

--- a/package.json
+++ b/package.json
@@ -33,6 +33,15 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/index.tsx",
+      "!src/react-app-env.d.ts",
+      "!src/reportWebVitals.ts",
+      "!src/types.ts"
+    ]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
