--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "file-saver": "^2.0.5",
+    "jest-fetch-mock": "^3.0.3",
     "jszip": "^3.10.1",
     "monaco-editor": "^0.43.0",
     "react": "^18.2.0",
@@ -30,10 +31,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --silent",
     "eject": "react-scripts eject"
   },
   "jest": {
+
     "collectCoverageFrom": [
       "src/**/*.{ts,tsx}",
       "!src/index.tsx",
@@ -67,6 +69,6 @@
   },
   "overrides": {
     "nth-check": "2.1.1",
-    "postcss":  "8.4.31"
+    "postcss": "8.4.31"
   }
 }
