feat: tests improvements

--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "eject": "react-scripts eject"
   },
   "jest": {
-
     "collectCoverageFrom": [
       "src/**/*.{ts,tsx}",
       "!src/index.tsx",
       "!src/react-app-env.d.ts",
       "!src/reportWebVitals.ts",
       "!src/types.ts",
-      "!src/redux/store.ts"
+      "!src/redux/store.ts",
+      "!src/cypress.config.ts"
     ]
   },
   "eslintConfig": {
