feat: Container/Presentational design pattern

--- a/public/app_config.json
+++ b/public/app_config.json
@@ -149,6 +149,11 @@
                     "patternName": "Object Pool(Java)",
                     "patternDir": "Object_pool",
                     "configFile": "object_pool_config.json"
+                },
+                {
+                    "patternName": "Container - Presentational",
+                    "patternDir": "Container - Presentational",
+                    "configFile": "container_presentational_config.json"
                 }
             ]
         }
